--- a/index.html
+++ b/index.html
@@ -190,11 +190,27 @@
                     <p class="mt-4 text-gray-500 text-sm">현재 조도량</p>
                 </div>
             </main>
-             <!-- Chart Card -->
-            <div class="mt-6 bg-white p-6 rounded-2xl shadow-md border border-gray-200">
-                <h3 class="text-xl font-semibold text-gray-800 mb-4">센서 데이터 변화 추이</h3>
-                <div class="h-80">
-                    <canvas id="sensorChart"></canvas>
+             <!-- Chart Grid -->
+            <div class="mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+                <!-- Temperature Chart -->
+                <div class="bg-white p-6 rounded-2xl shadow-md border border-gray-200">
+                    <h3 class="text-lg font-semibold text-gray-800 mb-4">온도 변화 (°C)</h3>
+                    <div class="h-64"><canvas id="tempChart"></canvas></div>
+                </div>
+                <!-- Humidity Chart -->
+                <div class="bg-white p-6 rounded-2xl shadow-md border border-gray-200">
+                    <h3 class="text-lg font-semibold text-gray-800 mb-4">습도 변화 (%)</h3>
+                    <div class="h-64"><canvas id="humidityChart"></canvas></div>
+                </div>
+                <!-- Soil Moisture Chart -->
+                <div class="bg-white p-6 rounded-2xl shadow-md border border-gray-200">
+                    <h3 class="text-lg font-semibold text-gray-800 mb-4">토양 수분 변화 (%)</h3>
+                    <div class="h-64"><canvas id="soilChart"></canvas></div>
+                </div>
+                <!-- Light Intensity Chart -->
+                <div class="bg-white p-6 rounded-2xl shadow-md border border-gray-200">
+                    <h3 class="text-lg font-semibold text-gray-800 mb-4">조도 변화 (lx)</h3>
+                    <div class="h-64"><canvas id="lightChart"></canvas></div>
                 </div>
             </div>
         </div>
@@ -232,7 +248,7 @@
         let simulationInterval = null;
 
         // Chart.js State
-        let sensorChart = null;
+        let tempChart, humidityChart, soilChart, lightChart;
 
         // Gauge circle circumference
         const circumference = 2 * Math.PI * 45;
@@ -257,111 +273,74 @@
         let targetSoil = 70; // Water pump threshold
 
         // --- Chart Functions ---
-        function initChart() {
-            const ctx = document.getElementById('sensorChart').getContext('2d');
-            sensorChart = new Chart(ctx, {
+        function createSensorChart(canvasId, label, color, min, max) {
+            const ctx = document.getElementById(canvasId).getContext('2d');
+            return new Chart(ctx, {
                 type: 'line',
                 data: {
                     labels: [],
-                    datasets: [
-                        {
-                            label: '온도 (°C)',
-                            data: [],
-                            borderColor: '#ef4444', // red-500
-                            backgroundColor: '#ef444420',
-                            yAxisID: 'yPercent',
-                            tension: 0.4,
-                            fill: true,
-                        },
-                        {
-                            label: '습도 (%)',
-                            data: [],
-                            borderColor: '#3b82f6', // blue-500
-                            backgroundColor: '#3b82f620',
-                            yAxisID: 'yPercent',
-                            tension: 0.4,
-                            fill: true,
-                        },
-                        {
-                            label: '토양 수분 (%)',
-                            data: [],
-                            borderColor: '#22c55e', // green-500
-                            backgroundColor: '#22c55e20',
-                            yAxisID: 'yPercent',
-                            tension: 0.4,
-                            fill: true,
-                        },
-                        {
-                            label: '조도 (lx)',
-                            data: [],
-                            borderColor: '#f59e0b', // amber-500
-                            backgroundColor: '#f59e0b20',
-                            yAxisID: 'yLight',
-                            tension: 0.4,
-                            fill: true,
-                        }
-                    ]
+                    datasets: [{
+                        label: label,
+                        data: [],
+                        borderColor: color,
+                        backgroundColor: color + '20', // Add alpha for fill
+                        tension: 0.4,
+                        fill: true,
+                        pointBackgroundColor: color,
+                        pointRadius: 2,
+                    }]
                 },
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
                     scales: {
-                        x: { ticks: { color: '#6b7280' } },
-                        yPercent: {
-                            type: 'linear',
-                            position: 'left',
-                            min: 0,
-                            max: 100,
-                            title: { display: true, text: '온도(℃) / 습도(%)', color: '#6b7280' },
-                            ticks: { color: '#6b7280' }
-                        },
-                        yLight: {
-                            type: 'linear',
-                            position: 'right',
-                            min: 0,
-                            max: 2000,
-                            title: { display: true, text: '조도 (lx)', color: '#6b7280' },
-                            grid: { drawOnChartArea: false },
-                            ticks: { color: '#6b7280' }
-                        }
+                        y: { min: min, max: max, ticks: { color: '#6b7280' } },
+                        x: { ticks: { color: '#6b7280' } }
                     },
                     plugins: {
-                        legend: { labels: { color: '#374151' } }
+                        legend: { display: false }
                     }
                 }
             });
         }
 
-        function resetChart() {
-            if (!sensorChart) return;
-            sensorChart.data.labels = [];
-            sensorChart.data.datasets.forEach(dataset => {
-                dataset.data = [];
-            });
-            sensorChart.update();
+        function initCharts() {
+            tempChart = createSensorChart('tempChart', '온도', '#ef4444', 0, 50);
+            humidityChart = createSensorChart('humidityChart', '습도', '#3b82f6', 0, 100);
+            soilChart = createSensorChart('soilChart', '토양 수분', '#22c55e', 0, 100);
+            lightChart = createSensorChart('lightChart', '조도', '#f59e0b', 0, 2000);
         }
 
-        function addDataToChart(temp, humidity, soil, light) {
-            if (!sensorChart) return;
+        function resetCharts() {
+            [tempChart, humidityChart, soilChart, lightChart].forEach(chart => {
+                if (chart) {
+                    chart.data.labels = [];
+                    chart.data.datasets[0].data = [];
+                    chart.update();
+                }
+            });
+        }
 
-            const labels = sensorChart.data.labels;
+        function addDataToCharts(temp, humidity, soil, light) {
+            const charts = [tempChart, humidityChart, soilChart, lightChart];
+            const data = [temp, humidity, soil, light];
+
             const now = new Date();
             const timeStr = now.getHours() + ':' + String(now.getMinutes()).padStart(2, '0') + ':' + String(now.getSeconds()).padStart(2, '0');
-            
-            labels.push(timeStr);
-            sensorChart.data.datasets[0].data.push(temp);
-            sensorChart.data.datasets[1].data.push(humidity);
-            sensorChart.data.datasets[2].data.push(soil);
-            sensorChart.data.datasets[3].data.push(light);
 
-            if (labels.length > 15) {
-                labels.shift();
-                sensorChart.data.datasets.forEach(dataset => {
-                    dataset.data.shift();
-                });
-            }
+            charts.forEach((chart, index) => {
+                if (!chart) return;
+                
+                const labels = chart.data.labels;
+                labels.push(timeStr);
+                chart.data.datasets[0].data.push(data[index]);
 
-            sensorChart.update();
+                if (labels.length > 15) {
+                    labels.shift();
+                    chart.data.datasets[0].data.shift();
+                }
+                chart.update('none'); // 'none' for no animation to sync them
+            });
         }
 
 
@@ -383,7 +362,7 @@
             updateGauge(lightProgressEl, currentLight, 2000);
 
             updatePumpStatus(currentSoil < targetSoil);
-            addDataToChart(temp, humidity, soil, light);
+            addDataToCharts(temp, humidity, soil, light);
         }
 
         function updatePumpStatus(isPumpActive) {
@@ -523,7 +502,7 @@
                 }
             } else {
                 updatePumpStatus(false);
-                resetChart();
+                resetCharts();
                 connectBtn.disabled = false;
                 connectBtn.classList.remove('opacity-50', 'cursor-not-allowed', 'bg-red-500', 'hover:bg-red-600');
                 connectBtn.classList.add('bg-blue-500', 'hover:bg-blue-600');
@@ -601,7 +580,7 @@
 
 
         // --- Initializations ---
-        initChart();
+        initCharts();
         setConnected(false); // Set initial button states and event listeners
 
     </script>
